--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,32 +27,20 @@
     <div class="row">
         <div class="product-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
-            <div class="row">
                 <div class="product-container col-10 offset-1">
                     <div class="row mt-1 mb-2">
-                        <div
-                            class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                             <div class="sort-select-wrapper w-50">
-                                <select id="sort-selector"
-                                    class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                                    <option value="reset" {% if current_sorting=='None_None' %}selected{% endif %}>Sort
-                                        by...</option>
-                                    <option value="price_asc" {% if current_sorting=='price_asc' %}selected{% endif %}>
-                                        Price (low to high)</option>
-                                    <option value="price_desc" {% if current_sorting=='price_desc' %}selected{% endif
-                                        %}>Price (high to low)</option>
-                                    <option value="rating_asc" {% if current_sorting=='rating_asc' %}selected{% endif
-                                        %}>Rating (low to high)</option>
-                                    <option value="rating_desc" {% if current_sorting=='rating_desc' %}selected{% endif
-                                        %}>Rating (high to low)</option>
-                                    <option value="name_asc" {% if current_sorting=='name_asc' %}selected{% endif %}>
-                                        Name (A-Z)</option>
-                                    <option value="name_desc" {% if current_sorting=='name_desc' %}selected{% endif %}>
-                                        Name (Z-A)</option>
-                                    <option value="category_asc" {% if current_sorting=='category_asc' %}selected{%
-                                        endif %}>Category (A-Z)</option>
-                                    <option value="category_desc" {% if current_sorting=='category_desc' %}selected{%
-                                        endif %}>Category (Z-A)</option>
+                                <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
+                                    <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
                                 </select>
                             </div>
                         </div>
@@ -89,51 +77,50 @@
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                                             {% if product.category %}
-                                            <p class="small mt-1 mb-0">
-                                                <a class="text-muted"
-                                                    href="{% url 'products' %}?category={{ product.category.name }}">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                                </a>
-                                            </p>
+                                                <p class="small mt-1 mb-0">
+                                                    <a class="text-muted"
+                                                        href="{% url 'products' %}?category={{ product.category.name }}">
+                                                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    </a>
+                                                </p>
                                             {% endif %}
                                             {% if product.rating %}
-                                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating
-                                                }} / 10</small>
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating}} / 10</small>
                                             {% else %}
-                                            <small class="text-muted">No Rating</small>
+                                                <small class="text-muted">No Rating</small>
                                             {% endif %}
                                             {% if request.user.is_superuser %}
-                                            <small class="ml-3">
-                                                <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                                <a class="text-danger"
-                                                    href="{% url 'delete_product' product.id %}">Delete</a>
-                                            </small>
+                                                <small class="ml-3">
+                                                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                    <a class="text-danger"
+                                                        href="{% url 'delete_product' product.id %}">Delete</a>
+                                                </small>
                                             {% endif %}
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        {% if forloop.counter|divisibleby:1 %}
-                        <div class="col-12 d-sm-none mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:2 %}
-                        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:3 %}
-                        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:4 %}
-                        <div class="col-12 d-none d-xl-block mb-5">
-                            <hr>
-                        </div>
-                        {% endif %}
+                            {% if forloop.counter|divisibleby:1 %}
+                                <div class="col-12 d-sm-none mb-5">
+                                    <hr>
+                                </div>
+                            {% endif %}
+                            {% if forloop.counter|divisibleby:2 %}
+                                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                    <hr>
+                                </div>
+                            {% endif %}
+                            {% if forloop.counter|divisibleby:3 %}
+                                <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                    <hr>
+                                </div>
+                            {% endif %}
+                            {% if forloop.counter|divisibleby:4 %}
+                                <div class="col-12 d-none d-xl-block mb-5">
+                                    <hr>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 </div>
@@ -144,7 +131,7 @@
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
         </div>
-        {% endblock %}
+{% endblock %}
 
         {% block postloadjs %}
         {{ block.super }}
