--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -130,8 +130,80 @@
                 </form>
             </div>
         </div>
+        <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col mb-4">
+                                    <h2 class="text-uppercase mt-3">reviews ({{ number_of_reviews }})</h2>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    {% for review in reviews %}
+                                        <div class="shadow-sm p-1 mb-3 bg-white rounded">
+                                            <p class="font-weight-bold mb-2 mt-3">Posted by: {{ review.user }} on {{ review.create_date }}</p>
+                                            <p class="text-black mb-2 mt-3">Rating: {{ review.product_rating }} </p>
+                                            <p class="text-black mb-2 mt-3">Review Text: {{ review.review_text }}</p>
+                                            {% if review.user == request.user or request.user.is_superuser %}
+                                            <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
+                                                <form class="form" method="POST" action="{% url 'delete_review' product.id review.user.username %}">
+                                                {% csrf_token %}
+                                                <button class="btn green-btn" type="submit"> Delete Review</button>
+                                            </form>
+                                            </div>
+                                            {% endif %}
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                                {% if reviews.has_other_pages %}
+                                <!-- Pagination -->
+                                <div class="pagination-holder p-4">
+                                    <nav aria-label="reviews paginated">
+                                        <ul class="pagination">
+                                            {% if reviews.has_previous %}
+                                              <li class="page-item"><a class="page-link" href="?page={{ reviews.previous_page_number }}">Previous</a></li>
+                                            {% else %}
+                                              <li class="disabled page-item"><span class="page-link">Previous</span></li>
+                                            {% endif %}
+                                            {% for i in reviews.paginator.page_range %}
+                                              {% if reviews.number == i %}
+                                                <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                                              {% else %}
+                                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                              {% endif %}
+                                            {% endfor %}
+                                            {% if reviews.has_next %}
+                                              <li class="page-item"><a class="page-link" href="?page={{ reviews.next_page_number }}">Next</a></li>
+                                            {% else %}
+                                              <li class="disabled page-item"><span class="page-link">Next</span></li>
+                                            {% endif %}
+                                        </ul>
+                                    </nav>
+                                </div>
+                                {% endif %}
+                            </div>
+                            <!-- Comment Form -->
+                            <div class="row pb-5">
+                                    <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
+                                        {% if request.user.is_authenticated %}
+                                            <h3 class="text-uppercase">Add a review</h3>
+                                            <form class="form" method="POST" action="{% url 'add_review' product.id %}">
+                                                {% csrf_token %}
+                                                {{ review_form|crispy }}
+                                                <button class="btn green-btn" type="submit"> Post Review</button>
+                                            </form>
+                                        {% else %}
+                                            <div>
+                                                <a href="{% url 'account_signup' %}">Create an account</a> or
+                                                <a href="{% url 'account_login' %}">login</a> to comment on this post.
+                                            </div>
+                                        {% endif %}
+                                    </div>
+                                </div>
     </div>
 </div>
+<hr>
 {% endblock %}
 
 {% block postloadjs %}
