--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -16,8 +16,8 @@
         <div class="col text-center mt-3">
             <h2 class="logo-font text-black">Products</h2>
             {% for c in current_categories %}
-            <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name
+            <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ category.name }}">
+                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ category.friendly_name
                     }}</span>
             </a>
             {% endfor %}
@@ -131,6 +131,7 @@
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
         </div>
+<hr>
 {% endblock %}
 
         {% block postloadjs %}
