--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,12 +44,8 @@ body {
 }
 
 .footer {
-    bottom: -50px;
-    height: 50px;
-    left: 0;
+    width: 100%;
     position: absolute;
-    right: 0;
-    margin-top: 30px;
 }
 
 .green-btn {
