--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a04ed0f7dc.js" crossorigin="anonymous"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
 
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
@@ -243,12 +246,9 @@
                         <form id="mailinglistform" onsubmit="return sendMail(this);">
                             <div class="input-group">
                                 <label for="email_address" hidden>Email Address:</label>
-                                <input type="email" placeholder="Enter your email address" id="email_address"
-                                    name="email_address" aria-describedby="newsletter"
-                                    class="form-control border-0 shadow-0">
+                                <input type="email" placeholder="Enter your email address" id="email_address" name="email_address" aria-describedby="newsletter" class="form-control border-0 shadow-0">
                                 <div class="input-group-append">
-                                    <button id="newsletter" type="submit" value="newsletter"
-                                        class="btn btn-link text-black">Signup</button>
+                                    <button id="newsletter" type="submit" value="newsletter" class="btn btn-link text-black">Signup</button>
                                 </div>
                             </div>
                         </form>
