--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,10 +2,11 @@
 {% load static %}
 {% load bag_tools %}
 
+<!-- Below imports extra CSS for the checkout page -->
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
-
+<!-- Page Header -->
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -24,7 +25,7 @@
             <hr>
         </div>
     </div>
-
+<!-- order summary below -->
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
@@ -36,10 +37,12 @@
                     <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                 </div>
             </div>
+<!-- for loop for bag items -->
             {% for item in bag_items %}
             <div class="row">
                 <div class="col-2 mb-1">
                     <a href="{% url 'product_detail' item.product.id %}">
+<!-- if statement for product image, if the product does have one it displays noimage.png-->
                         {% if item.product.image %}
                         <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                         {% else %}
@@ -47,6 +50,7 @@
                         {% endif %}
                     </a>
                 </div>
+                <!-- Shows item name and sizes that can be selected. Also has item quantity and price. -->
                 <div class="col-7">
                     <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                     <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}
@@ -59,6 +63,7 @@
             </div>
             {% endfor %}
             <hr class="my-0">
+            <!-- Below shows the order and delivery totals -->
             <div class="row text-black text-right">
                 <div class="col-7 offset-2">
                     <p class="my-0">Order Total:</p>
@@ -72,6 +77,7 @@
                 </div>
             </div>
         </div>
+        <!-- form for the user to complete the order -->
         <div class="col-12 col-lg-6">
             <p class="text-muted">Please fill out the form below to complete your order</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -106,14 +112,14 @@
                 </fieldset>
                 <fieldset class="px-3">
                     <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
-                    <!-- A Stripe card element will go here -->
+                    <!-- Stripe card element -->
                     <div class="mb-3" id="card-element"></div>
                     <!-- Used to display form errors -->
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                     <!-- Pass the client secret to the view so we can get the payment intent id -->
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
-
+                <!-- Buttons to adjust bag and complete order -->
                 <div class="submit-button text-right mt-5 mb-2">
                     <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                         <span class="icon">
@@ -127,6 +133,7 @@
                             <i class="fas fa-lock"></i>
                         </span>
                     </button>
+                    <!-- Tells the user how much will be charged from their card -->
                     <p class="small text-danger my-0">
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
@@ -138,6 +145,7 @@
         </div>
     </div>
 </div>
+<!-- Shows while the users payment is being taken -->
 <div id="loading-overlay">
     <h1 class="text-light logo-font loading-spinner">
         <span class="icon">
@@ -148,6 +156,7 @@
 <hr>
 {% endblock %}
 
+<!-- Below loads the extra javascript required for the checkout -->
 {% block postloadjs %}
 {{ block.super }}
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
