--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,6 +15,7 @@
 
 {% block content %}
 <div class="overlay"></div>
+<!-- Container for order confirmation message -->
 <div class="container">
     <div class="row">
         <div class="col">
@@ -24,7 +25,7 @@
             <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
         </div>
     </div>
-
+<!-- Below contains the order and billing information -->
     <div class="row">
         <div class="col-12 col-lg-7">
             <div class="order-confirmation-wrapper p-2 border">
@@ -193,6 +194,7 @@
             </div>
         </div>
     </div>
+<!-- Links for user to get back to profile and products -->
     <div class="row">
         <div class="col-12 col-lg-7 text-right">
             {% if from_profile %}
