--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -20,7 +20,7 @@
                 <hr>
             </div>
         </div>
-
+<!-- Form below is used to add a new product to the website by the product admin users only-->
         <div class="row">
             <div class="col-12 col-md-6 text-black">
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
