--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -20,7 +20,7 @@
                 <hr>
             </div>
         </div>
-
+<!-- Form used to edit a product on the website by admin only -->
         <div class="row">
             <div class="col-12 col-md-6 text-black">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
@@ -42,7 +42,7 @@
     </div>
 <hr>
 {% endblock %}
-
+<!-- Script to change image -->
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
