--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,6 +15,7 @@
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
+            <!-- If statement to show product image or noiamge.png -->
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank">
                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -26,10 +27,12 @@
                 {% endif %}
             </div>
         </div>
+        <!-- Shows product name and price -->
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ product.name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                <!-- If statement for the product category -->
                 {% if product.category %}
                 <p class="small mt-1 mb-0">
                     <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -37,11 +40,13 @@
                     </a>
                 </p>
                 {% endif %}
+                <!-- If statement for product rating -->
                 {% if product.rating %}
                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 10</small>
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
+                <!-- Below if statement displays options to edit or delete a item if the logged in user is an admin account -->
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -52,6 +57,7 @@
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
+                    <!-- Below is the size selector -->
                         {% with product.has_sizes as s %}
                         {% if s %}
                         <div class="col-12">
@@ -79,6 +85,7 @@
                             </select>
                         </div>
                         {% endif %}
+                        <!-- Product quantity below which user can change -->
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
@@ -104,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-
+                        <!-- Link back to products to continue shopping -->
                         <div class="col{% if s %}-12 mt-2{% endif %}">
                             <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                 <span class="icon">
@@ -116,6 +123,7 @@
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
+                        <!-- below if statement allows user to add or remove product from favourites -->
                         {% if is_product_in_favourites %}
                         <a href="{% url 'remove_product_from_favourites' product.id 'product' %}"
                             aria-label="remove product from favourites"
@@ -130,6 +138,7 @@
                 </form>
             </div>
         </div>
+<!-- Review section with option to add a review if the user is logged in -->
         <div class="container">
                     <div class="row">
                         <div class="col-12">
