--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,6 +15,7 @@
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font text-black">Products</h2>
+            <!-- For statement to show catergories of what was chosen from the nav bar -->
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                 <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
@@ -23,6 +24,7 @@
             <hr class="w-50 mb-1">
         </div>
     </div>
+<!-- Product sorting section -->
     <div class="row">
         <div class="product-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
@@ -45,6 +47,7 @@
                         </div>
                         <div class="col-12 col-md-6 order-md-first">
                             <p class="text-muted mt-3 text-center text-md-left">
+                                <!-- If statement to sort products from what has been entered in the search bar -->
                                 {% if search_term or current_categories or current_sorting != 'None_None' %}
                                 <span class=""><a href="{% url 'products' %}">Products Home</a> | </span>
                                 {% endif %}
@@ -54,6 +57,7 @@
                         </div>
                     </div>
                     <div class="row">
+                        <!-- For loop to display products -->
                         {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
@@ -100,6 +104,7 @@
                                 </div>
                             </div>
                         </div>
+                            <!-- If statement changes how the products are displayed on different sizes of screen -->
                             {% if forloop.counter|divisibleby:1 %}
                                 <div class="col-12 d-sm-none mb-5">
                                     <hr>
