--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -15,7 +15,7 @@
         <div class="row">
     <div class="col-12 col-sm-6 p-4 my-auto">
       <h1 class="text-black">Favourites ({{ favourites_items_count }})</h1>
-      <p class="text-black">Here are your favourites saved</p>
+      <p class="text-black">Below are the items you have added to your favourites!</p>
     </div>
 </div>
     
