--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,7 @@ body {
     padding: 0%;
     margin: 0%;
     position: absolute;
+    bottom: 0;
 }
 
 .footer p {  /* Selects text inside a <p> tag that is inside a .footer <div> */
