--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ html {
 body {
     background: url('/media/homepage-image.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh -64px);
+    height: 100vh;
     color: blue;
     font-family: 'Comfortaa', cursive;
     max-width: 100%;
