--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,7 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     display: flex;
+    position:relative
 }
 
 .shop-now-padding {
@@ -51,6 +52,7 @@ body {
 
 .footer {
     bottom: 0;
+    position: absolute;
 }
 
 .footer p {  /* Selects text inside a <p> tag that is inside a .footer <div> */
