--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     display: flex;
-    position:relative
+    position: relative;
 }
 
 .shop-now-padding {
